implement jekyll, navbar, boostrap

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+layout: default
+---
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,7 +9,7 @@
 <body>
 
   <h1>omegalul</h1>
-  <p><img src="wink.gif" alt="Wink"></p>
+  <p><img src="/assets/wink.gif" alt="Wink"></p>
 
 </body>
 </html>
