added resume to header

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@ layout: default
 </head>
 <body>
 
-  <h1>omegalul</h1>
-  <p><img src="/assets/wink.gif" alt="Wink"></p>
+<div class="container-fluid">
+    
+  <h1 class="text-center">The One <span class="text-danger">The Legend</span></h1>
+  <img src="/assets/wink.gif" alt="Wink" class="rounded mx-auto d-block">
+</div>
 
 </body>
 </html>
