--- a/index.html
+++ b/index.html
@@ -39,11 +39,16 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link js-scroll-trigger dropdown-toggle" href="#" data-toggle="dropdown">Portfolio</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="http://resume.williamhong.me/">Resume</a>
+              <a class="dropdown-item" href="http://campaign.williamhong.me/">Campaign</a>
+              <a class="dropdown-item" href="https://varnomen.hgvs.org/">Variant Nomenclature</a>
+              <a class="dropdown-item" href="http://waveform-906.appspot.com/">WaveForm</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item js-scroll-trigger" href="#portfolio">Portfolio</a>
+            </div>
           </li>
         </ul>
       </div>
@@ -55,12 +60,12 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase text-white font-weight-bold">The One <span class="text-danger">The Legend</span></h1>
+          <h1 class="text-uppercase text-white font-weight-bold">The One <span class="text-muted">The Legend</span></h1>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
           <p class="text-white-75 font-weight-light mb-5">William Hong</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#about">Find Out More</a>
         </div>
       </div>
     </div>
@@ -73,8 +78,8 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0 text-uppercase">The Showcase</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">Everything created by me over the years</p>
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+          <p class="text-white-50 mb-4">Everything created by me!</p>
+          <a class="btn btn-light btn-xl js-scroll-trigger" href="#portfolio">Get Started!</a>
         </div>
       </div>
     </div>
@@ -89,10 +94,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Personal Project
               </div>
               <div class="project-name">
-                Project Name
+                Resume
               </div>
             </div>
           </a>
@@ -102,10 +107,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Personal Project
               </div>
               <div class="project-name">
-                Project Name
+                Campaign
               </div>
             </div>
           </a>
@@ -115,10 +120,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                HGVS
               </div>
               <div class="project-name">
-                Project Name
+                Sequence Variant Nomenclature
               </div>
             </div>
           </a>
@@ -128,15 +133,15 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                University Project
               </div>
               <div class="project-name">
-                Project Name
+                WaveForm
               </div>
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <!-- <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
             <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
             <div class="portfolio-box-caption">
@@ -161,7 +166,7 @@
               </div>
             </div>
           </a>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
