fixed navbar on mobile and added ADSA content

--- a/index.html
+++ b/index.html
@@ -34,22 +34,32 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
+      <div class="collapse navbar-collapse text-uppercase" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link js-scroll-trigger dropdown-toggle" href="#" data-toggle="dropdown">Portfolio</a>
+            <a class="nav-link js-scroll-trigger dropdown-toggle d-none d-lg-block" href="#" data-toggle="dropdown">Portfolio</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="http://resume.williamhong.me/">Resume</a>
               <a class="dropdown-item" href="http://campaign.williamhong.me/">Campaign</a>
               <a class="dropdown-item" href="https://varnomen.hgvs.org/">Variant Nomenclature</a>
+              <a class="dropdown-item" href="https://adsa.org.au/">ADSA</a>
               <a class="dropdown-item" href="http://waveform-906.appspot.com/">WaveForm</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item js-scroll-trigger" href="#portfolio">Portfolio</a>
             </div>
           </li>
+          <div class="d-lg-none">
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
+            <div class="dropdown-divider"></div>
+            <li class="nav-item"><a href="http://resume.williamhong.me/" class="nav-link"></a>Resume</li>
+            <li class="nav-item"><a href="http://campaign.williamhong.me/" class="nav-link"></a>Campaign</li>
+            <li class="nav-item"><a href="https://varnomen.hgvs.org/" class="nav-link"></a>Variant Nomenclature</li>
+            <li class="nav-item"><a href="https://adsa.org.au/" class="nav-link"></a>ADSA</li>
+            <li class="nav-item"><a href="http://waveform-906.appspot.com/" class="nav-link"></a>WaveForm</li>
+          </div>
         </ul>
       </div>
     </div>
@@ -103,6 +113,32 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="img/portfolio/3.PNG">
+            <img class="img-fluid" src="img/portfolio/3.PNG" alt="">
+            <div class="portfolio-box-caption">
+              <div class="project-category text-white-50">
+                Project for HGVS
+              </div>
+              <div class="project-name">
+                Sequence Variant Nomenclature
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="img/portfolio/5.PNG">
+            <img class="img-fluid" src="img/portfolio/5.PNG" alt="">
+            <div class="portfolio-box-caption">
+              <div class="project-category text-white-50">
+                ADSA IT Officer Role
+              </div>
+              <div class="project-name">
+                ADSA Website
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/2.PNG">
             <img class="img-fluid" src="img/portfolio/2.PNG" alt="">
             <div class="portfolio-box-caption">
@@ -111,19 +147,6 @@
               </div>
               <div class="project-name">
                 Campaign
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/3.PNG">
-            <img class="img-fluid" src="img/portfolio/3.PNG" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                HGVS
-              </div>
-              <div class="project-name">
-                Sequence Variant Nomenclature
               </div>
             </div>
           </a>
