--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link js-scroll-trigger dropdown-toggle d-none d-lg-block" href="#" data-toggle="dropdown">Portfolio</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="http://resume.williamhong.me/">Resume</a>
               <a class="dropdown-item" href="http://campaign.williamhong.me/">Campaign</a>
               <a class="dropdown-item" href="https://varnomen.hgvs.org/">Variant Nomenclature</a>
