--- a/index.html
+++ b/index.html
@@ -70,12 +70,11 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase text-white font-weight-bold">The One <span class="text-muted">The Legend</span></h1>
+          <h1 class="text-uppercase text-white font-weight-bold">William <span class="text-muted">Hong</span></h1>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">William Hong</p>
-          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+          <h2 class="text-white-75 font-weight-light mb-5">Website Portfolio</h2>
         </div>
       </div>
     </div>
@@ -88,8 +87,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0 text-uppercase">The Showcase</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">Everything created by me!</p>
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="#portfolio">Get Started!</a>
+          <p class="text-white-75 mb-4">Click below to view thumbnails. Link is available in the thumbnail description!</p>
         </div>
       </div>
     </div>
@@ -100,7 +98,7 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/1.PNG" data-source="http://resume.williamhong.me/" title="Resume">
+          <a class="portfolio-box" href="img/portfolio/1.PNG" data-source="http://resume.williamhong.me/" data-desc="Independently created 2019. Bootstrap CSS, javascript (jQuery)" title="Resume">
             <img class="img-fluid" src="img/portfolio/1.PNG" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
@@ -113,7 +111,7 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/3.PNG" data-source="https://varnomen.hgvs.org/" title="Sequence Variant Nomenclature">
+          <a class="portfolio-box" href="img/portfolio/3.PNG" data-source="https://varnomen.hgvs.org/" data-desc="Independently created 2015. Bootstrap CSS, javascript (jQuery), Jekyll templating system" title="Sequence Variant Nomenclature">
             <img class="img-fluid" src="img/portfolio/3.PNG" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
@@ -126,7 +124,7 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/5.PNG" data-source="https://adsa.org.au/" title="ADSA">
+          <a class="portfolio-box" href="img/portfolio/5.PNG" data-source="https://adsa.org.au/" data-desc="Involved in development 2017, further independent improvements 2018. WordPress CMS" title="ADSA">
             <img class="img-fluid" src="img/portfolio/5.PNG" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
@@ -139,7 +137,7 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/2.PNG" data-source="http://campaign.williamhong.me/" title="Campaign">
+          <a class="portfolio-box" href="img/portfolio/2.PNG" data-source="http://campaign.williamhong.me/" data-desc="Independently created 2016. Bootstrap CSS, javascript (jQuery)" title="Campaign">
             <img class="img-fluid" src="img/portfolio/2.PNG" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
@@ -152,7 +150,7 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/4.PNG" data-source="http://waveform-906.appspot.com/" title="WaveForm">
+          <a class="portfolio-box" href="img/portfolio/4.PNG" data-source="http://waveform-906.appspot.com/" data-desc="Involved in development 2015. Bootstrap CSS, javascript, Google app engine" title="WaveForm">
             <img class="img-fluid" src="img/portfolio/4.PNG" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
