altered img size, need to fix div size

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters d-flex justify-content-center mx-auto">
         <div class="col-11 mt-5 mb-3" id="resume">
-          <a class="portfolio-box" href="img/portfolio/1.PNG" data-source="http://resume.williamhong.me/" data-desc="Independently created 2019. Bootstrap CSS, javascript (jQuery)" title="Resume">
-            <img class="img-fluid" src="img/portfolio/1.PNG" alt="">
-            <div class="portfolio-box-caption">
+          <!-- <a class="portfolio-box" href="img/portfolio/1.PNG" data-source="http://resume.williamhong.me/" data-desc="Independently created 2019. Bootstrap CSS, javascript (jQuery)" title="Resume"> -->
+            <img class="img-fluid mx-auto d-block" src="img/portfolio/1.PNG" alt="">
+<!--             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Personal Project
               </div>
@@ -111,7 +111,7 @@
                 Resume
               </div>
             </div>
-          </a>
+          </a> -->
         </div>
         <div class="row justify-content-center">
           <div class="col-lg-12 text-center">
@@ -120,10 +120,10 @@
           </div>
         </div>
 
-        <div class="col-11 mt-5 mb-3" id="varnomen">
-          <a class="portfolio-box" href="img/portfolio/3.PNG" data-source="https://varnomen.hgvs.org/" data-desc="Independently created 2015. Bootstrap CSS, javascript (jQuery), Jekyll templating system" title="Sequence Variant Nomenclature">
-            <img class="img-fluid" src="img/portfolio/3.PNG" alt="">
-            <div class="portfolio-box-caption">
+        <div class="col-11 mt-5 mb-3" id="varnomen" align="center">
+<!--           <a class="portfolio-box" href="img/portfolio/3.PNG" data-source="https://varnomen.hgvs.org/" data-desc="Independently created 2015. Bootstrap CSS, javascript (jQuery), Jekyll templating system" title="Sequence Variant Nomenclature"> -->
+            <img class="img-fluid mx-auto" src="img/portfolio/3.PNG" alt="">
+<!--             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Project for HGVS
               </div>
@@ -131,7 +131,7 @@
                 Sequence Variant Nomenclature
               </div>
             </div>
-          </a>
+          </a> -->
         </div>
         <div class="row justify-content-center">
           <div class="col-lg-12 text-center">
@@ -140,10 +140,10 @@
           </div>
         </div>
 
-        <div class="col-11 mt-5 mb-3" id="adsa">
-          <a class="portfolio-box" href="img/portfolio/5.PNG" data-source="https://adsa.org.au/" data-desc="Involved in development 2017, further independent improvements 2018. WordPress CMS" title="ADSA">
+        <div class="col-11 mt-5 mb-3" id="adsa" align="center">
+<!--           <a class="portfolio-box" href="img/portfolio/5.PNG" data-source="https://adsa.org.au/" data-desc="Involved in development 2017, further independent improvements 2018. WordPress CMS" title="ADSA"> -->
             <img class="img-fluid" src="img/portfolio/5.PNG" alt="">
-            <div class="portfolio-box-caption">
+<!--             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 ADSA IT Officer Role
               </div>
@@ -151,7 +151,7 @@
                 ADSA Website
               </div>
             </div>
-          </a>
+          </a> -->
         </div>
         <div class="row justify-content-center">
           <div class="col-lg-12 text-center">
@@ -160,17 +160,17 @@
           </div>
         </div>
 
-        <div class="col-11 mt-5 mb-3" id="campaign">
-          <a class="portfolio-box" href="img/portfolio/2.PNG" data-source="http://campaign.williamhong.me/" data-desc="Independently created 2016. Bootstrap CSS, javascript (jQuery)" title="Campaign">
+        <div class="col-11 mt-5 mb-3" id="campaign" align="center">
+<!--           <a class="portfolio-box" href="img/portfolio/2.PNG" data-source="http://campaign.williamhong.me/" data-desc="Independently created 2016. Bootstrap CSS, javascript (jQuery)" title="Campaign"> -->
             <img class="img-fluid" src="img/portfolio/2.PNG" alt="">
-            <div class="portfolio-box-caption">
+<!--             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Personal Project
               </div>
               <div class="project-name">
                 Campaign
               </div>
-            </div>
+            </div> -->
           </a>
         </div>
         <div class="row justify-content-center">
@@ -180,10 +180,10 @@
           </div>
         </div>
 
-        <div class="col-11 mt-5 mb-3" id="waveform">
-          <a class="portfolio-box" href="img/portfolio/4.PNG" data-source="http://waveform-906.appspot.com/" data-desc="Involved in development 2015. Bootstrap CSS, javascript, Google app engine" title="WaveForm">
+        <div class="col-11 mt-5 mb-3" id="waveform" align="center">
+<!--           <a class="portfolio-box" href="img/portfolio/4.PNG" data-source="http://waveform-906.appspot.com/" data-desc="Involved in development 2015. Bootstrap CSS, javascript, Google app engine" title="WaveForm"> -->
             <img class="img-fluid" src="img/portfolio/4.PNG" alt="">
-            <div class="portfolio-box-caption">
+<!--             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 University Project
               </div>
@@ -191,7 +191,7 @@
                 WaveForm
               </div>
             </div>
-          </a>
+          </a> -->
         </div>
         <div class="row justify-content-center">
           <div class="col-lg-12 text-center">
@@ -205,7 +205,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-dark text-white py-5">
+  <footer class="bg-dark text-white py-5 mt-2">
     <div class="container">
       <!-- <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
