--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
   <section id="portfolio">
     <div class="container-fluid p-0">
       <div class="row no-gutters d-flex justify-content-center mx-auto">
-        <div class="col-11 mt-5 mb-3" id="resume">
+        <div class="col-11 text-center mt-5" id="resume">
           <!-- <a class="portfolio-box" href="img/portfolio/1.PNG" data-source="http://resume.williamhong.me/" data-desc="Independently created 2019. Bootstrap CSS, javascript (jQuery)" title="Resume"> -->
-            <img class="img-fluid mx-auto d-block" src="img/portfolio/1.PNG" alt="">
+            <img class="img-fluid mx-auto" src="img/portfolio/1.PNG" alt="">
 <!--             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Personal Project
@@ -112,15 +112,11 @@
               </div>
             </div>
           </a> -->
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-lg-12 text-center">
-            <div class="text-black-50 mt-2 mb-3">Independently created 2019. Bootstrap CSS, javascript (jQuery)</div>
+            <div class="text-black-50 mt-2 mb-3 text-center">Independently created 2019. Bootstrap CSS, javascript (jQuery)</div>
             <a class="btn btn-dark btn-xl" href="http://resume.williamhong.me/" target="_blank">Visit</a>
-          </div>
         </div>
-
-        <div class="col-11 mt-5 mb-3" id="varnomen" align="center">
+        
+        <div class="col-11 text-center mt-5" id="varnomen">
 <!--           <a class="portfolio-box" href="img/portfolio/3.PNG" data-source="https://varnomen.hgvs.org/" data-desc="Independently created 2015. Bootstrap CSS, javascript (jQuery), Jekyll templating system" title="Sequence Variant Nomenclature"> -->
             <img class="img-fluid mx-auto" src="img/portfolio/3.PNG" alt="">
 <!--             <div class="portfolio-box-caption">
@@ -132,15 +128,11 @@
               </div>
             </div>
           </a> -->
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-lg-12 text-center">
             <div class="text-black-50 mt-2 mb-3">Independently created 2015. Bootstrap CSS, javascript (jQuery), Jekyll templating system</div>
             <a class="btn btn-dark btn-xl" href="https://varnomen.hgvs.org/" target="_blank">Visit</a>
-          </div>
         </div>
 
-        <div class="col-11 mt-5 mb-3" id="adsa" align="center">
+        <div class="col-11 text-center mt-5" id="adsa">
 <!--           <a class="portfolio-box" href="img/portfolio/5.PNG" data-source="https://adsa.org.au/" data-desc="Involved in development 2017, further independent improvements 2018. WordPress CMS" title="ADSA"> -->
             <img class="img-fluid" src="img/portfolio/5.PNG" alt="">
 <!--             <div class="portfolio-box-caption">
@@ -152,15 +144,11 @@
               </div>
             </div>
           </a> -->
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-lg-12 text-center">
             <div class="text-black-50 mt-2 mb-3">Involved in development 2017, further independent improvements 2018. WordPress CMS</div>
             <a class="btn btn-dark btn-xl" href="https://adsa.org.au/" target="_blank">Visit</a>
-          </div>
         </div>
 
-        <div class="col-11 mt-5 mb-3" id="campaign" align="center">
+        <div class="col-11 text-center mt-5" id="campaign">
 <!--           <a class="portfolio-box" href="img/portfolio/2.PNG" data-source="http://campaign.williamhong.me/" data-desc="Independently created 2016. Bootstrap CSS, javascript (jQuery)" title="Campaign"> -->
             <img class="img-fluid" src="img/portfolio/2.PNG" alt="">
 <!--             <div class="portfolio-box-caption">
@@ -171,16 +159,12 @@
                 Campaign
               </div>
             </div> -->
-          </a>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-lg-12 text-center">
             <div class="text-black-50 mt-2 mb-3">Independently created 2016. Bootstrap CSS, javascript (jQuery)</div>
             <a class="btn btn-dark btn-xl" href="http://campaign.williamhong.me/" target="_blank">Visit</a>
-          </div>
+          </a>
         </div>
 
-        <div class="col-11 mt-5 mb-3" id="waveform" align="center">
+        <div class="col-11 text-center mt-5" id="waveform">
 <!--           <a class="portfolio-box" href="img/portfolio/4.PNG" data-source="http://waveform-906.appspot.com/" data-desc="Involved in development 2015. Bootstrap CSS, javascript, Google app engine" title="WaveForm"> -->
             <img class="img-fluid" src="img/portfolio/4.PNG" alt="">
 <!--             <div class="portfolio-box-caption">
@@ -192,12 +176,8 @@
               </div>
             </div>
           </a> -->
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-lg-12 text-center">
             <div class="text-black-50 mt-2 mb-3">Involved in development 2015. Bootstrap CSS, javascript, Google app engine</div>
             <a class="btn btn-dark btn-xl" href="http://waveform-906.appspot.com/" target="_blank">Visit</a>
-          </div>
         </div>
 
       </div>
