fixed links, added descriptions

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               </div>
             </div>
           </a> -->
-            <div class="text-black-50 mt-2 mb-3 text-center">Independently created 2019. Bootstrap CSS, javascript (jQuery)</div>
+            <div class="text-black-50 mt-2 mb-3 text-center"><b>Online resume</b> <br> <i>Personal Project</i> <br>Independently created 2019. Bootstrap CSS, javascript (jQuery)</div>
             <a class="btn btn-dark btn-xl" href="http://resume.williamhong.me/" target="_blank">Visit</a>
         </div>
         
@@ -128,7 +128,7 @@
               </div>
             </div>
           </a> -->
-            <div class="text-black-50 mt-2 mb-3">Independently created 2015. Bootstrap CSS, javascript (jQuery), Jekyll templating system</div>
+            <div class="text-black-50 mt-2 mb-3"><b>Sequence Variant Nomenclature</b> <br> <i>Project for HGVS</i> <br>Independently created 2015. Bootstrap CSS, javascript (jQuery), Jekyll templating system</div>
             <a class="btn btn-dark btn-xl" href="https://varnomen.hgvs.org/" target="_blank">Visit</a>
         </div>
 
@@ -144,7 +144,7 @@
               </div>
             </div>
           </a> -->
-            <div class="text-black-50 mt-2 mb-3">Involved in development 2017, further independent improvements 2018. WordPress CMS</div>
+            <div class="text-black-50 mt-2 mb-3"><b>ADSA website</b> <br> <i>ADSA IT Officer Role</i> <br>Involved in development 2017, further independent improvements 2018. WordPress CMS</div>
             <a class="btn btn-dark btn-xl" href="https://adsa.org.au/" target="_blank">Visit</a>
         </div>
 
@@ -159,7 +159,7 @@
                 Campaign
               </div>
             </div> -->
-            <div class="text-black-50 mt-2 mb-3">Independently created 2016. Bootstrap CSS, javascript (jQuery)</div>
+            <div class="text-black-50 mt-2 mb-3"><b>Campaign</b><br><i>Personal Project</i><br> Independently created 2016. Bootstrap CSS, javascript (jQuery)</div>
             <a class="btn btn-dark btn-xl" href="http://campaign.williamhong.me/" target="_blank">Visit</a>
           </a>
         </div>
@@ -176,7 +176,7 @@
               </div>
             </div>
           </a> -->
-            <div class="text-black-50 mt-2 mb-3">Involved in development 2015. Bootstrap CSS, javascript, Google app engine</div>
+            <div class="text-black-50 mt-2 mb-3"><b>WaveForm</b><br><i>University Project</i><br> Involved in development 2015. Bootstrap CSS, javascript, Google app engine</div>
             <a class="btn btn-dark btn-xl" href="http://waveform-906.appspot.com/" target="_blank">Visit</a>
         </div>
 
@@ -213,7 +213,7 @@
 
   <!-- Plugin JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-  <script src="js/magnific-popup/jquery.magnific-popup.min.js"></script>
+  <!-- <script src="js/magnific-popup/jquery.magnific-popup.min.js"></script> -->
 
   <!-- Custom scripts for this template -->
   <script src="js/creative.js"></script>
