ux change caption

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               </div>
             </div>
           </a> -->
-            <div class="text-black-50 mt-2 mb-3 text-center"><b>Online resume</b> <br> <i>Personal Project</i> <br>Independently created 2019. Bootstrap CSS, javascript (jQuery)</div>
+            <div class="text-black-50 mt-2 mb-3 mx-auto caption"><b>Online resume</b> <br> <i>Personal Project</i> <br>Independently created 2019. Bootstrap CSS, javascript (jQuery)</div>
             <a class="btn btn-dark btn-xl" href="http://resume.williamhong.me/" target="_blank">Visit</a>
         </div>
         
@@ -137,7 +137,7 @@
               </div>
             </div>
           </a> -->
-            <div class="text-black-50 mt-2 mb-3"><b>Sequence Variant Nomenclature</b> <br> <i>Project for HGVS</i> <br>Independently created 2015. Bootstrap CSS, javascript (jQuery), Jekyll templating system</div>
+            <div class="text-black-50 mt-2 mb-3 mx-auto caption"><b>Sequence Variant Nomenclature</b> <br> <i>Project for HGVS</i> <br>Independently created 2015. Bootstrap CSS, javascript (jQuery), Jekyll templating system</div>
             <a class="btn btn-dark btn-xl" href="https://varnomen.hgvs.org/" target="_blank">Visit</a>
         </div>
 
@@ -153,7 +153,7 @@
               </div>
             </div>
           </a> -->
-            <div class="text-black-50 mt-2 mb-3"><b>ADSA website</b> <br> <i>ADSA IT Officer Role</i> <br>Involved in development 2017, further independent improvements 2018. WordPress CMS</div>
+            <div class="text-black-50 mt-2 mb-3 mx-auto caption"><b>ADSA website</b> <br> <i>ADSA IT Officer Role</i> <br>Involved in development 2017, further independent improvements 2018. WordPress CMS</div>
             <a class="btn btn-dark btn-xl" href="https://adsa.org.au/" target="_blank">Visit</a>
         </div>
 
@@ -168,7 +168,7 @@
                 Campaign
               </div>
             </div> -->
-            <div class="text-black-50 mt-2 mb-3"><b>Campaign</b><br><i>Personal Project</i><br> Independently created 2016. Bootstrap CSS, javascript (jQuery)</div>
+            <div class="text-black-50 mt-2 mb-3 mx-auto caption"><b>Campaign</b><br><i>Personal Project</i><br> Independently created 2016. Bootstrap CSS, javascript (jQuery)</div>
             <a class="btn btn-dark btn-xl" href="http://campaign.williamhong.me/" target="_blank">Visit</a>
           </a>
         </div>
@@ -185,7 +185,7 @@
               </div>
             </div>
           </a> -->
-            <div class="text-black-50 mt-2 mb-3"><b>WaveForm</b><br><i>University Project</i><br> Involved in development 2015. Bootstrap CSS, javascript, Google app engine</div>
+            <div class="text-black-50 mt-2 mb-3 mx-auto caption"><b>WaveForm</b><br><i>University Project</i><br> Involved in development 2015. Bootstrap CSS, javascript, Google app engine</div>
             <a class="btn btn-dark btn-xl" href="http://waveform-906.appspot.com/" target="_blank">Visit</a>
         </div>
 
