--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     gtag('config', 'UA-139837493-1');
   </script>
 
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
@@ -39,7 +41,9 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top py-3" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">William Hong</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">
+        William Hong
+      </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -82,6 +86,7 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
+          <img src="img/logo.png" height="200" width="200" alt="logo">
           <h1 class="text-uppercase text-white font-weight-bold">William <span class="text-muted">Hong</span></h1>
           <hr class="divider my-4">
         </div>
