logo, colour, links

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         </div>
         <div class="col-lg-8 align-self-baseline">
           <h2 class="text-white-75 font-weight-light mb-5">Website Portfolio</h2>
+          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#portfolio">Enter</a>
         </div>
       </div>
     </div>
@@ -104,7 +105,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-black mt-0 text-uppercase">The Showcase</h2>
           <hr class="divider light my-4">
-          <p class="text-black-50 mb-4">Click below to view thumbnails. Link is available in the thumbnail description!</p>
+          <p class="text-white-50 mb-4">Click below to view thumbnails. Link is available in the thumbnail description!</p>
         </div>
       </div>
     </div>
@@ -116,7 +117,9 @@
       <div class="row no-gutters d-flex justify-content-center mx-auto">
         <div class="col-11 text-center mt-5" id="resume">
           <!-- <a class="portfolio-box" href="img/portfolio/1.PNG" data-source="http://resume.williamhong.me/" data-desc="Independently created 2019. Bootstrap CSS, javascript (jQuery)" title="Resume"> -->
-            <img class="img-fluid mx-auto" src="img/portfolio/1.PNG" alt="">
+            <a href="http://resume.williamhong.me/">
+              <img class="img-fluid mx-auto" src="img/portfolio/1.PNG" alt="Resume">
+            </a> 
 <!--             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Personal Project
@@ -126,13 +129,15 @@
               </div>
             </div>
           </a> -->
-            <div class="text-black-50 mt-2 mb-3 mx-auto caption"><b>Online resume</b> <br> <i>Personal Project</i> <br>Independently created 2019. Bootstrap CSS, javascript (jQuery)</div>
+            <div class="text-white-50 mt-2 mb-3 mx-auto caption"><b>Online resume</b> <br> <i>Personal Project</i> <br>Independently created 2019. Bootstrap CSS, javascript (jQuery)</div>
             <a class="btn btn-dark btn-xl" href="http://resume.williamhong.me/" target="_blank">Visit</a>
         </div>
         
         <div class="col-11 text-center mt-5" id="varnomen">
 <!--           <a class="portfolio-box" href="img/portfolio/3.PNG" data-source="https://varnomen.hgvs.org/" data-desc="Independently created 2015. Bootstrap CSS, javascript (jQuery), Jekyll templating system" title="Sequence Variant Nomenclature"> -->
-            <img class="img-fluid mx-auto" src="img/portfolio/3.PNG" alt="">
+          <a href="https://varnomen.hgvs.org/">
+            <img class="img-fluid mx-auto" src="img/portfolio/3.PNG" alt="Variant Nomenclature">
+          </a>          
 <!--             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Project for HGVS
@@ -142,13 +147,15 @@
               </div>
             </div>
           </a> -->
-            <div class="text-black-50 mt-2 mb-3 mx-auto caption"><b>Sequence Variant Nomenclature</b> <br> <i>Project for HGVS</i> <br>Independently created 2015. Bootstrap CSS, javascript (jQuery), Jekyll templating system</div>
+            <div class="text-white-50 mt-2 mb-3 mx-auto caption"><b>Sequence Variant Nomenclature</b> <br> <i>Project for HGVS</i> <br>Independently created 2015. Bootstrap CSS, javascript (jQuery), Jekyll templating system</div>
             <a class="btn btn-dark btn-xl" href="https://varnomen.hgvs.org/" target="_blank">Visit</a>
         </div>
 
         <div class="col-11 text-center mt-5" id="adsa">
 <!--           <a class="portfolio-box" href="img/portfolio/5.PNG" data-source="https://adsa.org.au/" data-desc="Involved in development 2017, further independent improvements 2018. WordPress CMS" title="ADSA"> -->
-            <img class="img-fluid" src="img/portfolio/5.PNG" alt="">
+          <a href="https://adsa.org.au/">
+            <img class="img-fluid" src="img/portfolio/5.PNG" alt="ADSA">
+          </a>
 <!--             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 ADSA IT Officer Role
@@ -158,13 +165,15 @@
               </div>
             </div>
           </a> -->
-            <div class="text-black-50 mt-2 mb-3 mx-auto caption"><b>ADSA website</b> <br> <i>ADSA IT Officer Role</i> <br>Involved in development 2017, further independent improvements 2018. WordPress CMS</div>
+            <div class="text-white-50 mt-2 mb-3 mx-auto caption"><b>ADSA website</b> <br> <i>ADSA IT Officer Role</i> <br>Involved in development 2017, further independent improvements 2018. WordPress CMS</div>
             <a class="btn btn-dark btn-xl" href="https://adsa.org.au/" target="_blank">Visit</a>
         </div>
 
         <div class="col-11 text-center mt-5" id="campaign">
 <!--           <a class="portfolio-box" href="img/portfolio/2.PNG" data-source="http://campaign.williamhong.me/" data-desc="Independently created 2016. Bootstrap CSS, javascript (jQuery)" title="Campaign"> -->
-            <img class="img-fluid" src="img/portfolio/2.PNG" alt="">
+          <a href="http://campaign.williamhong.me/">
+            <img class="img-fluid" src="img/portfolio/2.PNG" alt="Campaign">
+          </a>          
 <!--             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Personal Project
@@ -173,14 +182,16 @@
                 Campaign
               </div>
             </div> -->
-            <div class="text-black-50 mt-2 mb-3 mx-auto caption"><b>Campaign</b><br><i>Personal Project</i><br> Independently created 2016. Bootstrap CSS, javascript (jQuery)</div>
+            <div class="text-white-50 mt-2 mb-3 mx-auto caption"><b>Campaign</b><br><i>Personal Project</i><br> Independently created 2016. Bootstrap CSS, javascript (jQuery)</div>
             <a class="btn btn-dark btn-xl" href="http://campaign.williamhong.me/" target="_blank">Visit</a>
           </a>
         </div>
 
         <div class="col-11 text-center mt-5" id="waveform">
 <!--           <a class="portfolio-box" href="img/portfolio/4.PNG" data-source="http://waveform-906.appspot.com/" data-desc="Involved in development 2015. Bootstrap CSS, javascript, Google app engine" title="WaveForm"> -->
-            <img class="img-fluid" src="img/portfolio/4.PNG" alt="">
+          <a href="http://waveform-906.appspot.com/">
+            <img class="img-fluid" src="img/portfolio/4.PNG" alt="WaveForm">
+          </a>          
 <!--             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 University Project
@@ -190,7 +201,7 @@
               </div>
             </div>
           </a> -->
-            <div class="text-black-50 mt-2 mb-3 mx-auto caption"><b>WaveForm</b><br><i>University Project</i><br> Involved in development 2015. Bootstrap CSS, javascript, Google app engine</div>
+            <div class="text-white-50 mt-2 mb-3 mx-auto caption"><b>WaveForm</b><br><i>University Project</i><br> Involved in development 2015. Bootstrap CSS, javascript, Google app engine</div>
             <a class="btn btn-dark btn-xl" href="http://waveform-906.appspot.com/" target="_blank">Visit</a>
         </div>
 
