--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
           <li class="nav-item dropdown">
             <a class="nav-link js-scroll-trigger dropdown-toggle d-none d-lg-block" href="#" data-toggle="dropdown">Portfolio</a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="http://resume.williamhong.me/">Resume</a>
-              <a class="dropdown-item" href="http://campaign.williamhong.me/">Campaign</a>
+              <a class="dropdown-item" href="http://resume.williamhong.page/">Resume</a>
+              <a class="dropdown-item" href="http://campaign.williamhong.page/">Campaign</a>
               <a class="dropdown-item" href="https://varnomen.hgvs.org/">Variant Nomenclature</a>
               <a class="dropdown-item" href="https://adsa.org.au/">ADSA</a>
               <a class="dropdown-item" href="http://waveform-906.appspot.com/">WaveForm</a>
@@ -70,8 +70,8 @@
           <div class="d-lg-none">
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
             <div class="dropdown-divider"></div>
-            <li class="nav-item"><a href="http://resume.williamhong.me/" class="nav-link"></a>Resume</li>
-            <li class="nav-item"><a href="http://campaign.williamhong.me/" class="nav-link"></a>Campaign</li>
+            <li class="nav-item"><a href="http://resume.williamhong.page/" class="nav-link"></a>Resume</li>
+            <li class="nav-item"><a href="http://campaign.williamhong.page/" class="nav-link"></a>Campaign</li>
             <li class="nav-item"><a href="https://varnomen.hgvs.org/" class="nav-link"></a>Variant Nomenclature</li>
             <li class="nav-item"><a href="https://adsa.org.au/" class="nav-link"></a>ADSA</li>
             <li class="nav-item"><a href="http://waveform-906.appspot.com/" class="nav-link"></a>WaveForm</li>
@@ -116,8 +116,8 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters d-flex justify-content-center mx-auto">
         <div class="col-11 text-center mt-5" id="resume">
-          <!-- <a class="portfolio-box" href="img/portfolio/1.PNG" data-source="http://resume.williamhong.me/" data-desc="Independently created 2019. Bootstrap CSS, javascript (jQuery)" title="Resume"> -->
-            <a href="http://resume.williamhong.me/">
+          <!-- <a class="portfolio-box" href="img/portfolio/1.PNG" data-source="http://resume.williamhong.page/" data-desc="Independently created 2019. Bootstrap CSS, javascript (jQuery)" title="Resume"> -->
+            <a href="http://resume.williamhong.page/">
               <img class="img-fluid mx-auto" src="img/portfolio/1.PNG" alt="Resume">
             </a> 
 <!--             <div class="portfolio-box-caption">
@@ -130,7 +130,7 @@
             </div>
           </a> -->
             <div class="text-white-50 mt-2 mb-3 mx-auto caption"><b>Online resume</b> <br> <i>Personal Project</i> <br>Independently created 2019. Bootstrap CSS, javascript (jQuery)</div>
-            <a class="btn btn-dark btn-xl" href="http://resume.williamhong.me/" target="_blank">Visit</a>
+            <a class="btn btn-dark btn-xl" href="http://resume.williamhong.page/" target="_blank">Visit</a>
         </div>
         
         <div class="col-11 text-center mt-5" id="varnomen">
@@ -170,8 +170,8 @@
         </div>
 
         <div class="col-11 text-center mt-5" id="campaign">
-<!--           <a class="portfolio-box" href="img/portfolio/2.PNG" data-source="http://campaign.williamhong.me/" data-desc="Independently created 2016. Bootstrap CSS, javascript (jQuery)" title="Campaign"> -->
-          <a href="http://campaign.williamhong.me/">
+<!--           <a class="portfolio-box" href="img/portfolio/2.PNG" data-source="http://campaign.williamhong.page/" data-desc="Independently created 2016. Bootstrap CSS, javascript (jQuery)" title="Campaign"> -->
+          <a href="http://campaign.williamhong.page/">
             <img class="img-fluid" src="img/portfolio/2.PNG" alt="Campaign">
           </a>          
 <!--             <div class="portfolio-box-caption">
@@ -183,7 +183,7 @@
               </div>
             </div> -->
             <div class="text-white-50 mt-2 mb-3 mx-auto caption"><b>Campaign</b><br><i>Personal Project</i><br> Independently created 2016. Bootstrap CSS, javascript (jQuery)</div>
-            <a class="btn btn-dark btn-xl" href="http://campaign.williamhong.me/" target="_blank">Visit</a>
+            <a class="btn btn-dark btn-xl" href="http://campaign.williamhong.page/" target="_blank">Visit</a>
           </a>
         </div>
 
@@ -224,7 +224,7 @@
           <a href="https://github.com/williamOP"><i class="fab fa-github fa-3x mb-3 text-muted"></i></a>
         </div>
         <div class="col-3 mr-auto text-center">
-          <a href="http://resume.williamhong.me/"><i class="far fa-file fa-3x mb-3 text-muted"></i></a>
+          <a href="http://resume.williamhong.page/"><i class="far fa-file fa-3x mb-3 text-muted"></i></a>
         </div>
       </div>
     </div>
