--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
 
 {% include masthead.html pageName = "Website Portfolio" %}
 
-{% include portfolio.html id="resume" url="http://www.williamhong.page/" imgURL="img/portfolio/blog.PNG" 
+{% include portfolio.html id="resume" url="http://www.williamhong.page/" imgURL="img/portfolio/blog.png" 
 caption="Dental blog" projectType="Personal Project" technology="Independently created 2021. Bootstrap CSS, HTML" %}
 
 {% include portfolio.html id="resume" url="http://resume.williamhong.page/" imgURL="img/portfolio/resume.PNG" 
